--- a/desafio 2/index.html
+++ b/desafio 2/index.html
@@ -17,7 +17,7 @@
             <div class="formcontainer">
                 <h2 class="mb">GARANTA O SEU LUGAR NO WORKSHOP DO MAIOR ESPECIALISTA EM MARKETING DA ATUALIDADE</h2>
                 <p class="mb">Neste evento você vai aprender todos os segredos que vão te fazer ser um empreendedor de sucesso, sem precisar contar com a sorte</p>
-                <form action="">
+                <form action="post">
                     <input type="text" id="name" name="name" placeholder="Nome">
                     <input type="email" id="email" name="email" placeholder="email">
                     <select name="place" id="place">
@@ -30,7 +30,15 @@
                 </form>
             </div>
         </section>
+        <footer>
+            <img class="picture" src="imagens/Cópia de face.jpg" alt="foto do rosto">
+            <div class="description">
+                <h3>O PALESTRANTE</h3>
+                <p>Carlos Fontana é conhecido por das palestras que abalam a estrutura do marketing tradicional. Prepare-se para sair do evento com uma nova visão do que é possivel ser feito para o seu negocio decolar</p>
+                <p>Formado em Marketing pela Universidade XYZ e fundador da MarkUp, a empresa vencedora dos ultimos 5 Prêmios MarketingBr</p>
 
+            </div>
+        </footer>
 
 
     </div>
