--- a/desafio 2/index.html
+++ b/desafio 2/index.html
@@ -17,15 +17,17 @@
             <div class="formcontainer">
                 <h2 class="mb">GARANTA O SEU LUGAR NO WORKSHOP DO MAIOR ESPECIALISTA EM MARKETING DA ATUALIDADE</h2>
                 <p class="mb">Neste evento você vai aprender todos os segredos que vão te fazer ser um empreendedor de sucesso, sem precisar contar com a sorte</p>
-                <form action="post">
-                    <input type="text" id="name" name="name" placeholder="Nome">
-                    <input type="email" id="email" name="email" placeholder="email">
+                <form action="https://hotmail.us5.list-manage.com/subscribe/post?u=d0f3778a6475ce14cfcf3653e&amp;id=65cb204f48" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
+                    <input type="text" id="name" name="FNAME" placeholder="Nome">
+                    <input type="email" id="email" name="EMAIL" placeholder="email">
                     <select name="place" id="place">
                         <option value="RJ">Rio de Janeiro</option>
                         <option value="SP">São Paulo</option>
                         <option value="MG">Minas Gerais</option>
                         <option value="ES">Espirito Santo</option>
                     </select>
+                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d0f3778a6475ce14cfcf3653e_65cb204f48" tabindex="-1" value=""></div>
                     <input type="submit" value="INSCREVA-SE">
                 </form>
             </div>
@@ -45,3 +47,5 @@
 
 </body>
 </html>
+
+
